# terraform_vpclink_modular.old

./: README.md
backend/: .gitlab-ci.yml  Dockerfile  cspell.json  ecosystem.config.cjs  jest.config.js
backend/src/: AlertReport.js  Server.js  eslint.config.js  package.json  pullCerts.js
backend/src/API/: AppDAPI.js  DashChangeAPI.js  DashLocationDataAPI.js  GrafanaAPI.js  RunbookAPI.js
backend/src/Components/: CommonUtils.js  CreateRunbookJson.js  CreateStatus.js  CreateStatusJson.js  GrabStatus.js  (+6 more)
dms-migration/: .editorconfig  .gitlab-ci.yml  .gitlab-deployments-ci.yml  .npmrc  .pre-commit-config.yaml  .tflint.hcl  .trivyignore  README.md  environments.yml  package-lock.json  package.json  pyproject.toml  release.config.js
dms-migration/post_deploy/: test.py
dms-migration/terraform/: .terraform-docs.yml  .terraform.lock.hcl  main.tf  variables.tf  versions.tf
ecs/: .editorconfig  .gitignore  .gitlab-ci.yml  .gitlab-deployments-ci.yml  .markdownlint.yml  .npmrc  .pre-commit-config.yaml  .terraform-docs.yml  .tflint.hcl  Makefile  alb.tf  context.tf  datasources.tf  ecs.tf  environments.yml  package-lock.json  package.json  provider.tf  pyproject.toml  release.config.js  variables.tf  versions.tf
ecs/terraform/: .terraform-docs.yml  .terraform.lock.hcl  alb.tf  datasources.tf  defaults.auto.tfvars  ecs.tf  main.tf  variables.tf
ecs/terraform/tfvars/dev/: dev0.tfvars
ecs/terraform/tfvars/prod/: prod0.tfvars
ecs/terraform/tfvars/qa/: qa0.tfvars
ecs/tfvars/prod/: prod0.tfvars
network/: .gitignore  .gitlab-ci.yml  .gitlab-deployments-ci.yml  .npmrc  .terraform-docs.yml  Makefile  datasources.tf  environments.yml  locals.tf  main.tf  package-lock.json  package.json  pyproject.toml  release.config.js  variables.tf
network/terraform/: .terraform.lock.hcl  datasources.tf  defaults.auto.tfvars  main.tf  outputs.tf  variables.tf
public-hosted-zone/: .gitignore  .gitlab-ci.yml  .gitlab-deployments-ci.yml  .npmrc  .pre-commit-config.yaml  .trivyignore  defaults.auto.tfvars  environments.yml  locals.tf  main.tf  package-lock.json  package.json  pyproject.toml  release.config.js  variables.tf
public-hosted-zone/terraform/: .terraform-docs.yml  .terraform.lock.hcl  main.tf  outputs.tf  versions.tf
public-hosted-zone/terraform/modules/acm_certificate_validation/: README.md  main.tf  variables.tf  versions.tf
public-hosted-zone/terraform/tfvars/dev/: dev0.tfvars
public-hosted-zone/terraform/tfvars/qa/: qa0.tfvars
public-hosted-zone/tfvars/dev/: dev2.tfvars
rds-database/: .gitlab-ci.yml  .gitlab-deployments-ci.yml  .markdownlint.yml  environments.yml  main.tf  package-lock.json  package.json  provider.tf  pyproject.toml  variables.tf
rds-database/terraform/: .terraform.lock.hcl  context.tf  main.tf  variables.tf
spa/: .env  .gitignore  .gitlab-ci.yml  .gitlab-deployments-ci.yml  .markdownlint.yml  .pre-commit-config.yaml  .terraform-docs.yml  .tflint.hcl  .trivyignore  Makefile  cloudfront_function.js  defaults.auto.tfvars  environments.yml  eslint.config.js  index.html  main.tf  package-lock.json  package.json  provider.tf  pyproject.toml  release.config.js  sonar-project.properties  stylelint.config.js  tsconfig.json  versions.tf  vite.config.js  vitest.config.js
spa/public/: manifest.json
spa/scripts/: smoke-test.sh
spa/src/: App.jsx  index.jsx
spa/src/CSS/: General.css  Health.css  LIAT.css  Messages.css  RITMFormComponents.css  Runbooks.css  Toolbar.css  setIconUtils.css
spa/src/CSS/Common_Components/: Application.css  AreaCard.css  CommonComponents.css  PortfolioList.css
spa/src/CSS/Rolling_Components/: Footer.css  FooterBanner.css  Rolling.css  Sidebar.css
spa/src/Components/: Messages.jsx  Toolbar.jsx  miscUtils.jsx  setIconUtils.jsx  viewsUtils.jsx  withRouter.jsx
spa/src/Components/Common_Components/: Application.jsx  AreaCard.jsx  Changes.jsx  PortfolioList.jsx
spa/src/Components/RITM_Form_Components/: AddForm.jsx  ChangeForm.jsx  DeleteForm.jsx  Login.jsx  RunbookAddForm.jsx
spa/src/Components/Rolling_Components/: Clock.jsx  Footer.jsx  FooterBanner.jsx  Sidebar.jsx
spa/src/Components/__tests__/: Messages.test.jsx
spa/src/Views/: Health.jsx  LIAT.jsx  Portfolio.jsx  RITMs.jsx  Rolling.jsx  Runbooks.jsx
spa/src/__tests__/: App.test.jsx  test-utils.js
spa/src/config/: api.js
spa/terraform/: .terraform-docs.yml  .terraform.lock.hcl  cloudfront_strip_api.js  datasources.tf  main.tf  outputs.tf  variables.tf
spa/terraform/modules/: README.md
spa/terraform/modules/s3_static_website_assets_deploy/: README.md  main.tf  variables.tf  versions.tf
spa/terraform/tfvars/dev/: dev0.tfvars
spa/tests/: favicon.test.js
spa/tfvars/dev/: dev0.tfvars
spa/tfvars/qa/: qa0.tfvars
(+28 files in other folders)
