[project]
authors = [
  {email = "EC-CloudCommonPod-DG@wnco.com", name = "Enterprise Cloud"},
]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
description = "CCP Next Template for Single Page Application Deployment"
dynamic = ["dependencies"]
name = "ccp-next-spa-template"
readme = "README.md"
requires-python = ">=3.12,<4.0"
version = "1.42.0"

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ccp-next-general-resources = {source = "ddarke-releases", version = "^2.0.3"}
pre-commit = "^4.2.0"

[[tool.poetry.source]]
name = "ddarke-pypi"
url = "https://nexus-tools.ddarkecorp.com/repository/pypi/simple"

[[tool.poetry.source]]
name = "ddarke-releases"
url = "https://nexus-tools.ddarkecorp.com/repository/pypi-releases/simple"

[[tool.poetry.source]]
name = "ddarke-dev"
priority = "supplemental"
url = "https://nexus-tools.ddarkecorp.com/repository/pypi-dev/simple"

[tool.tomlsort]
all = true
in_place = true
sort_first = ["project", "tool", "tool.poetry"]
spaces_before_inline_comment = 2
trailing_comma_inline_array = true
overrides."tool.poetry".first = ["name", "version"]
overrides."tool.poetry.dependencies".first = ["python"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
